--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <span class="tag">Data Analysis</span>
                     </div>
                 </div>
-                <a href="https://drive.google.com/drive/folders/1yuJ3w7iHneO2v5OB07trVSIg-52T_XlX?usp=sharing" target="_blank" class="btn">Read Case Study</a>
+                <a href="https://drive.google.com/drive/folders/1yuJ3w7iHneO2v5OB07trVSIg-52T_XlX?usp=sharing" class="btn">Read Case Study</a>
             </div>
 
             <div class="card">
@@ -223,4 +223,5 @@
     </div>
 
 </body>
+
 </html>
