--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
     background-color: #050505;
-    /* Smoky Neon Glow Effect from your image */
+ 
     background-image: 
         radial-gradient(circle at 50% 100%, rgba(0, 215, 255, 0.2) 0%, transparent 50%),
         radial-gradient(circle at 10% 20%, rgba(0, 81, 162, 0.15) 0%, transparent 40%),
@@ -33,20 +33,20 @@ body {
 
 header h1 {
     font-size: 3.5rem;
-    /* Electric Cyan Colour */
+   
     color: #00D7FF; 
     text-shadow: 0 0 10px rgba(0, 215, 255, 0.8), 
                  0 0 30px rgba(0, 215, 255, 0.4);
     margin-bottom: 5px;
 }
 
-/* Card border glow according to image */
+
 .card:hover {
     border-color: #00D7FF;
     box-shadow: 0 0 20px rgba(0, 215, 255, 0.3);
 }
 
-/* Isse aapka header aur chamkega */
+
 header h1 {
     font-size: 3.5rem;
     color: #00f2fe;
@@ -186,6 +186,7 @@ header h1 {
         <header>
             <h1>ANKUR VERMA</h1>
             <p>My Personal Digital Library</p>
+            <p>I am a Geoinformatics professional specializing in Geospatial Technology and data analysis. With a Master’s degree from Guru Jambeshwar University of Science and Technology , I have developed expertise in ArcGIS Pro, Google Earth Engine, and Python coding. My work focuses on creating innovative solutions, such as custom GIS tools for batch processing and automated projection.</p>
         </header>
 
         <div class="grid">
@@ -535,6 +536,7 @@ function unlockSection8() {
 </body>
 
 </html>
+
 
 
 
