Revise index.html with updated content and styles
Updated the content and styles in the index.html file, including changes to the header, sections, and footer. Enhanced the descriptions and links for better clarity and functionality.

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ header h1 {
         <header>
             <h1>ANKUR VERMA</h1>
             <p>My Personal Digital Library</p>
-            <p>I am a Geoinformatics professional specializing in Geospatial Technology and data analysis. With a Master’s degree from Guru Jambeshwar University of Science and Technology , I have developed expertise in ArcGIS Pro, Google Earth Engine, and Python coding. My work focuses on creating innovative solutions, such as custom GIS tools for batch processing and automated projection.</p>
+            <p>I am a dedicated Geoinformatics professional with a Master’s degree from Guru Jambeshwar University of Science and Technology. I specialize in leveraging geospatial technologies like ArcGIS Pro, Google Earth Engine, and LiDAR for complex data analysis and problem-solving. Throughout my academic and professional journey, I have successfully contributed to significant initiatives such as the Swamitva Yojana in Haryana and the Maharashtra Bullet Train project. My technical expertise extends to Python and SQL coding, which I use to develop custom automation tools like my Batch Clip and Base Map Image Downloader. Through this digital library, I aim to showcase my skills in remote sensing, 3D mapping, and innovative spatial solutions designed to support sustainable development.</p>
         </header>
 
         <div class="grid">
@@ -536,6 +536,7 @@ function unlockSection8() {
 </body>
 
 </html>
+
 
 
 
